# Robotics-numerical-optimization

./: readme.md
hw-l2/src/curve_gen/config/: curve_gen.rviz  curve_gen.yaml
hw-l2/src/curve_gen/include/curve_gen/: cubic_spline.hpp
hw-l2/src/curve_gen/include/misc/: visualizer.hpp
hw-l2/src/curve_gen/src/: curve_gen.cpp
hw-l3/low-dim QP/include/sdqp/: sdqp.hpp
hw-l3/mpc-car-tutorial-master/: README.md
hw-l3/mpc-car-tutorial-master/src/mpc_car/include/mpc_car/: mpc_car.hpp
hw-l4/SDQP/: CMakeLists.txt
hw-l4/SDQP/example/: test.cc
hw-l4/SOCP/: CMakeLists.txt  main.cpp
第一章/: CMakeLists.txt  main  main.cpp  main_raw.cpp
